# ZECxtend

./: .gitignore  API_Endpoints.md  Er-diagramm.md  README.md  TODO  Todo.md  docker-compose.yml
Web-App/: next.config.ts  package-lock.json  (+1 more)
api-server/: Dockerfile.migrator  dev-start.sh  dev.sh  docker-compose.yml  pyproject.toml  ruff.toml
api-server/cruds/crud-auth/: auth.py
api-server/cruds/crud-team/: team.py
api-server/legacy/crud/attempt/: attempt.py  export.py
api-server/legacy/crud/crud-attempt/: attempt.py
api-server/legacy/crud/crud-auth/: auth.py
api-server/legacy/crud/crud-score/: export.py  penalty.py  score.py
api-server/legacy/crud/score/: leaderboard.py  score.py
api-server/legacy/crud/team/: driver.py  team.py
api-server/legacy/crud/user/: user.py
api-server/legacy/routers/: user.py
api-server/migrations/: env.py
api-server/migrations/versions/: 55a43a763f7a_innit_migration.py  82ef9d99882f_add_password_hash.py  9896c8c74d29_update_user.py  b4b3961f16fe_innit_migration.py  ce6c625f7921_add_password_hash.py  ec6b889263b5_add_models.py
api-server/scripts/: alembic_script.sh  dev-build.sh  dev-start.sh  env.sh
api-server/seed/: seed-challenge.py  seed-pen.py  seed-user.py
api-server/services/api-gateway/: nginx.conf
api-server/services/api-gateway/templates/: nginx.conf.template
api-server/services/api_gateway/: Dockerfile  nginx.conf
api-server/services/api_gateway/lua/: auth.lua
api-server/services/attempt-service/: Dockerfile  pyproject.toml
api-server/services/attempt-service/app/: config.py  main.py
api-server/services/attempt-service/app/crud/: attempt.py  penalty.py  score.py
api-server/services/attempt-service/app/database/: dependency.py  session.py
api-server/services/attempt-service/app/models/: attempt.py  penalty.py  penalty_type.py  score.py
api-server/services/attempt_service/: Dockerfile  pyproject.toml
api-server/services/attempt_service/app/: main.py
api-server/services/auth-service/: Dockerfile  pyproject.toml
api-server/services/auth-service/app/: config.py  dependency.py  main.py
api-server/services/auth_service/: Dockerfile  pyproject.toml
api-server/services/auth_service/app/: config.py  main.py
api-server/services/challenge-service/: Dockerfile  pyproject.toml
api-server/services/challenge-service/app/: main.py
api-server/services/challenge_service/: Dockerfile  pyproject.toml
api-server/services/challenge_service/app/: config.py  main.py
api-server/services/roster-service/: Dockerfile  pyproject.toml
api-server/services/roster-service/app/: main.py
api-server/services/roster_service/: Dockerfile  pyproject.toml
api-server/services/roster_service/app/: main.py
api-server/services/score-service/: Dockerfile  pyproject.toml
api-server/services/score-service/app/: config.py  main.py
api-server/services/team-service/: Dockerfile  pyproject.toml
api-server/services/team-service/app/: config.py  main.py
api-server/services/user-service/: pyproject.toml
api-server/services/user-service/app/: config.py  main.py
api-server/shared/: config.py  crud_base.py  database.py  database.py.py  exceptions.py  health.py  pyproject.toml  schemas.py  user_role.py
api-server/templates/postman/: ZEC-API.postman_collection.json
api-server/tests/: conftest.py
api-server/tests/api/: test_score_export_api.py  test_user.py
api-server/tests/crud/: test_attempt_export_crud.py  test_attempts_crud.py  test_team_crud.py
api-server/tests/tests-attempt/crud/: test_export_crud.py
api-server/tests/tests-auth/: conftest.py
api-server/tests/tests-challenge/: conftest.py
api-server/tests/tests-score/: conftest.py
api-server/tests/tests-score/crud/: test_leaderboard_crud.py
(+295 files in other folders)
