[project]
name = "zecxtend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "shared",
    "services/attempt-service",
    "services/auth-service",
    "services/challenge-service",
    "services/roster-service",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"