[project]
name = "zecxtend"
version = "0.1.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "shared",
    "services/attempt-service",
    "services/auth-service",
    "services/challenge-service",
    "services/roster-service",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "isort>=8.0",
    "aiosqlite>=0.22",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
