[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]