[project]
name = "auth_service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "uvicorn[standard]>=0.47",
    "python-multipart>=0.0.29",
    "PyJWT>=2.12.1",
    "bcrypt>=3.2.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]