[project]
name = "challenge-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]