[project]
name = "challenge_service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "uvicorn[standard]>=0.47",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]